  Collaborators can now share content that they are working on with each other.

--Editor pickers now accept raw ID numbers in search boxes, pulling up
  object/sprite that matches that ID.

--Editor pickers NEXT/PREV buttons now jump 25 on CTRL, 125 on SHIFT, and 625
  on CTRL+SHIFT.  You can now page through all official OHOL items in 7 clicks,
  where it used to be 35 clicks.  Part of #998



Version 406   2023-December-23

--steamGateClient now handles uploading mods to Steam Workshop and
  downloading/installing subscribed mods.

--Whoops... EditorExportPage was allowing _ in export tag names.




Version 405   2023-December-15

--Fixed fprintf type warning found with old Mac compiler.

--Added missing DLLs for editor on Windows.




Version 404   2023-December-15

--Fixed so that BELL and HELL arrow labels are in English.txt translation file
  instead of hard-coded.

--Fixed loads of places in both client and server that would cause a crash if
  content data set wasn't sufficiently fleshed out (at least one person object,
  at least one natural object, at least one food object, etc.).  Now both
  client and server are stable regardless of state of content set.

--Fixed memory leak when objects folder contains object .txt files with
  duplicate IDs.  Previously they were overwritten in the id map without
  freeing the previous object.  Now, only the first object scanned is kept,
  and any additional ones are freed correctly.

--Game now supports loading mods from mods folder.

--Windows build scripts now include building editor.

--Public release of EditOneLife binary on Windows and Steam.




Editor Fixes:

--Fixed soundBank to roll back nextSoundNumber value whenever last sound in
  bank is deleted, to avoid sound id inflation.

--Fixed SoundWidget to uncount live use of old sound before saving new sound
  when recording over a sound.  This further reduces sound id inflation.  Now,
  if you record a bunch of sounds, with multiple overwriting takes for each